--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,10 @@
   padding: 5px 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-<<<<<<< HEAD
-
-.bar { position: relative; z-index: 10; /* Higher z-index to be in front */ } 
+.bar {
+  position: relative;
+  z-index: 10; /* Higher z-index to be in front */
+}
 
 #style-15::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
@@ -23,15 +24,13 @@
 
 #style-15::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #03346E; /* Updated base color */
+  background-color: #03346e; /* Updated base color */
   background-image: -webkit-gradient(
     linear,
     40% 0%,
     75% 84%,
-    from(#03346E),
-    to(#022A5B),
-    color-stop(0.6, #04407A)
+    from(#03346e),
+    to(#022a5b),
+    color-stop(0.6, #04407a)
   );
 }
-=======
->>>>>>> 4d40667d93d9c684b0f4c9c83c2164a1c7dcc1b9
