--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   padding: 5px 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.bar {
+.bar1 {
   position: relative;
   z-index: 10; /* Higher z-index to be in front */
 }
