--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -328,18 +328,24 @@ h2 {
   color: #fff;
   font-size: 12px;
   text-align: center;
+  font-weight: bold;
 }
 
 .status.printed {
-  background-color: #4caf50;
+  /* font-weight: bold;
+  color: #4caf50; */
+
+  background-color:#4caf50 ;
 }
 
 .status.in-progress {
-  background-color: #ff9800;
+  font-weight: bold;
+  color: #ff9800;
 }
 
 .status.errored {
-  background-color: #f44336;
+  font-weight: bold;
+  color: #f44336;
 }
 
 .show-more {
