--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -156,11 +156,13 @@
 }
 
 .right-section .div1 {
-  height: 300px;
+  /* height: 300px; */
   background-color: #edf2fb;
   margin-top: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
 }
 .right-section .div1 .name {
   margin-top: 20px;
@@ -168,9 +170,10 @@
   font-weight: bold;
 }
 .right-section .div1 .data {
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 19px;
 }
+
 .right-section .div1 .name,
 .right-section .div1 .data,
 .right-section .div1 .date {
@@ -180,7 +183,9 @@
 .right-section .div1 .data {
   display: flex;
   margin-bottom: 20px;
-  column-gap: 20px;
+  column-gap: 40px;
+  width: 100%;
+  padding-right: 40px;
 }
 .right-section .div1 .data .test img {
   width: 30px;
@@ -191,6 +196,7 @@
   background-color: #024caa;
   padding-left: 18px;
   padding-top: 12px;
+  padding-right: 18px;
   padding-bottom: 12px;
   border-radius: 15px;
 }
@@ -335,7 +341,7 @@ h2 {
   /* font-weight: bold;
   color: #4caf50; */
 
-  background-color:#4caf50 ;
+  background-color: #4caf50;
 }
 
 .status.in-progress {
